# ratatoskr

./: LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: pages.yml  release.yml
scripts/: bump-version.mjs  screenshot.mjs
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  history.rs  hosts.rs  keys.rs  known_hosts.rs  lib.rs  portable.rs  session_log.rs  sftp.rs  snippets.rs  ssh.rs  ssh_config.rs  store.rs  tunnel.rs  vault.rs
src-tauri/tests/: live_ssh.rs
src/components/: BroadcastBar.tsx  CommandPalette.tsx  ConfirmCloseDialog.tsx  EmptyState.tsx  FindBar.tsx  HostForm.tsx  LockScreen.tsx  SessionTabs.tsx  SettingsDialog.tsx  SftpBrowser.tsx  SftpEditor.tsx  ShortcutsDialog.tsx  Sidebar.tsx  SnippetForm.tsx  TerminalArea.tsx  TerminalView.tsx  TunnelForm.tsx  UpdateBanner.tsx
src/components/panels/: HistoryPanel.tsx  HostsPanel.tsx  KeysPanel.tsx  KnownHostsPanel.tsx  PanelEmpty.tsx  SnippetsPanel.tsx  TunnelsPanel.tsx
src/components/ui/: scroll-area.tsx
src/hooks/: use-autolock.ts  use-shortcuts.ts
src/lib/: editor-lang.ts  ipc.ts  terminal-themes.ts
src/stores/: hosts.ts  library.ts  sessions.ts  settings.ts  sftp.ts  tunnels.ts  ui.ts  updater.ts  vault.ts
web/: index.html
