[package]
name = "ratatoskr"
version = "0.2.2"
description = "Cliente SSH propio, rápido y bonito"
authors = ["chefibecerra"]
edition = "2021"

[lib]
name = "ratatoskr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = "0.62"
russh-sftp = "2.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time", "io-util"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
argon2 = "0.5"
chacha20poly1305 = "0.10"
base64 = "0.22"
zeroize = "1"
strip-ansi-escapes = "0.2"
